# ActionAutomaton

./: ChangeLog.md  README.md  automaton.cabal  stack.yaml
src/Data/: Automaton.hs
test/: Spec-Automaton.hs
test/Test/Data/: Automaton.hs
