cabal-version:       2.4

name:                automaton
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/L-Solutions/ActionAutomaton#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Benoît Fraikin 
maintainer:          benoit.fraikin@USherbrooke.ca
copyright:           GRIIS (griis.ca) 2019 
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md

source-repository head
  type: git
  location: https://github.com/L-Solutions/ActionAutomaton

library
  exposed-modules:
      Data.Automaton
  hs-source-dirs: 
      src
  default-language:
      Haskell2010
  build-depends: 
      base >= 4.7 && < 5
    , mtl > 2.2
    , parsec > 3
    , semigroupoids > 5.3
    , text > 1.2
    , textdecoration >= 0.1

test-suite Automaton-test
  type: 
      exitcode-stdio-1.0
  main-is:
      Spec-Automaton.hs
  other-modules:
      Test.Lib
  hs-source-dirs:
      test
  ghc-options:
      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      automaton
    , base >=4.7 && <5
    , mtl >2.2
    , text >1.2
    , textdecoration >= 0.1
  default-language:
      Haskell2010

